deployment.yaml
#frontend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: pnt-quiz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: nginx
        ports:
        - containerPort: 80
