ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pnt-ingress
  namespace: pnt-quiz
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: frontend.pnt-quiz.aks.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  - host: backend.pnt-quiz.aks.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
